Fix #meow-image not appearing on smaller screens

--- a/src/styles.css
+++ b/src/styles.css
@@ -47,7 +47,6 @@ main.container,
     display: flex;
     flex-flow: column;
     flex: 1 1 auto;
-    overflow-y: auto;
 } 
 
 footer.container {
